--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "uniqid": "^5.4.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "eslint-config-airbnb": "18.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,6 @@
   },
   "devDependencies": {
     "eslint": "^7.2.0",
-    "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
